# oboe-test

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/michaelpohl/oboetest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AAssetDataSource.cpp  AAssetDataSource.h  AudioEngine.cpp  AudioEngine.h  Constants.h  DataSource.h  MonoToStereo.h  NDKExtractor.h  native-lib.cpp  native_lib.cpp  oboePlayer.cpp
app/src/main/java/com/michaelpohl/oboetest/: CppAdapter.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/michaelpohl/oboetest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
